--- a/MediaBrowser.Api/MediaBrowser.Api.csproj
+++ b/MediaBrowser.Api/MediaBrowser.Api.csproj
@@ -84,6 +84,8 @@
     <Compile Include="Playback\MediaInfoService.cs" />
     <Compile Include="Playback\TranscodingThrottler.cs" />
     <Compile Include="PlaylistService.cs" />
+    <Compile Include="Reports\Activities\ReportActivitiesBuilder.cs" />
+    <Compile Include="Reports\Common\HeaderActivitiesMetadata.cs" />
     <Compile Include="Reports\Common\HeaderMetadata.cs" />
     <Compile Include="Reports\Common\ItemViewType.cs" />
     <Compile Include="Reports\Common\ReportBuilderBase.cs" />
@@ -91,15 +93,16 @@
     <Compile Include="Reports\Common\ReportFieldType.cs" />
     <Compile Include="Reports\Common\ReportHeaderIdType.cs" />
     <Compile Include="Reports\Common\ReportHelper.cs" />
+    <Compile Include="Reports\Common\ReportIncludeItemTypes.cs" />
     <Compile Include="Reports\Common\ReportViewType.cs" />
     <Compile Include="Reports\Data\ReportBuilder.cs" />
     <Compile Include="Reports\Data\ReportExport.cs" />
-    <Compile Include="Reports\Data\ReportGroup.cs" />
-    <Compile Include="Reports\Data\ReportHeader.cs" />
-    <Compile Include="Reports\Data\ReportItem.cs" />
     <Compile Include="Reports\Data\ReportOptions.cs" />
-    <Compile Include="Reports\Data\ReportResult.cs" />
-    <Compile Include="Reports\Data\ReportRow.cs" />
+    <Compile Include="Reports\Model\ReportGroup.cs" />
+    <Compile Include="Reports\Model\ReportHeader.cs" />
+    <Compile Include="Reports\Model\ReportItem.cs" />
+    <Compile Include="Reports\Model\ReportResult.cs" />
+    <Compile Include="Reports\Model\ReportRow.cs" />
     <Compile Include="Reports\ReportRequests.cs" />
     <Compile Include="Reports\ReportsService.cs" />
     <Compile Include="Reports\Stat\ReportStatBuilder.cs" />
@@ -204,6 +207,13 @@
     <PostBuildEvent>
     </PostBuildEvent>
   </PropertyGroup>
+  <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>This project references NuGet package(s) that are missing on this computer. Enable NuGet Package Restore to download them.  For more information, see http://go.microsoft.com/fwlink/?LinkID=322105. The missing file is {0}.</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('$(SolutionDir)\.nuget\NuGet.targets')" Text="$([System.String]::Format('$(ErrorText)', '$(SolutionDir)\.nuget\NuGet.targets'))" />
+  </Target>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
   <Target Name="BeforeBuild">
